# appsec-advisor

./: --help  .appsec-progress.json  .gitattributes  .gitignore  .mcp.json  AGENTS.md  BACKLOG-quality-improvements.md  BUGREPORT-qa-content-repair-schema.md  CHANGELOG.md  CLAUDE.md  CLAUDE2.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README2.md  README3.en.md  README3.md  README4.md  SECURITY.md  abuse-cases-improvement-analysis.md  abuse-cases-value-plan.md  abusecaseimpl.md  abusecases.md  actors.md  analyse1.md  analyse2.md  arch.md  arch2.md  arch3.md  bugs.md  config.json  custom.md  demo.md  design_decision_templates.md  dev.md  diagrams.md  example.md  full-m1-design.md  llm.md  (+18 more)
.claude/: settings.json
.claude-plugin/: plugin.json
.github/: CODEOWNERS  fixture-presets.json  pull_request_template.md  threat-model-presets.json
agents/: appsec-abuse-case-verifier.md  appsec-actor-discoverer.md  appsec-architect-reviewer.md  appsec-config-scanner.md  appsec-context-resolver.md  appsec-dep-scanner.md  appsec-eval-judge.md  appsec-evidence-verifier.md  appsec-fragment-fixer.md  appsec-ms-renderer.md  appsec-qa-reviewer.md  appsec-recon-scanner.md  appsec-requirements-verifier.md  appsec-reviewer.md  appsec-secarch-renderer.md  appsec-stride-analyzer.md  appsec-threat-analyst.md  appsec-threat-merger.md  appsec-threat-renderer.md  appsec-triage-validator.md
claude-plugin/: CLAUDE.md
data/: actor-id-to-heatmap-slug.yaml  appsec-bestpractices-baseline.yaml  appsec-requirements-fallback.yaml  architectural-controls.yaml  architecture-coverage-rules.yaml  attack-class-taxonomy.yaml  breach-distance-patterns.yaml  breach-vector-taxonomy.yaml  business-impact-taxonomy.yaml  completeness-contract.yaml  component-canonical.yaml  compound-chain-patterns.yaml  config-iac-checks.yaml  consolidation-groups.yaml  context-budgets.yaml  credential-lifecycle-checks.yaml  critical-criteria.yaml  crypto-checks.yaml  cvss-eligible-cwes.yaml  cwe-taxonomy.yaml  dep-scan-heuristics.yaml  filesystem-route-prefixes.yaml  finding-types.yaml  known-bad-libs.yaml  mass-assignment-signatures.yaml  owasp-top10-cwes.yaml  pentest-eligible-cwes.yaml  phase-budgets.yaml  posture-actor-labels.yaml  posture-rubric.yaml  required-permissions.yaml  sca-practice-severity.yaml  scan-excludes.yaml  sections-contract.yaml  security-libraries.yaml  source-auth-checks.yaml  strength-clusters.yaml  threat-category-taxonomy.yaml  weakness-classes.yaml
doc/: distribution-strategies.md
docs/: adding-a-section.md  analysis-disable-opus.md  analysis-llm-ai-architecture-coverage.md  analysis-requirements-mapping-correctness.md  analysis-supply-chain-coverage-improvement.md  analysis-top-threats-merge.md  architecture.md  architecture2.md  audit-artifacts.md  checkarch.md  cleanup-whitelist.md  client-side-threat-coverage-analysis.md  comparison-requirements-vs-security-review.md  comparison-sonnet-opus.md  comparison-stride-gpt.md  configuration.md  cross-platform-portability.md  dev-security-helper-usage.md  e2e-cross-repo-fixture.md  e2e-fixtures.md  flags-reference.md  glossary.md  harvester.md  headless-mode.md  internal-plugin-packaging.md  model-selection.md  multi-repo-analysis.md  org-profiles.md  plan-disable-opus.md  proposal-dev-security-helper.md  proposal-external-threat-model-ingestion.md  proposal-requirements-verifier-subagent.md  qa-performance-assessment.md  quick-mode-speedup-plan.md  refactoring-plan.md  releasing.md  rendering-pipeline.md  schema-invariants.md  security-coach-skill.md  security-hardening-plan.md  (+8 more)
examples/: comparision.md  comparision_thorough_quality.md  known-threats.yaml  threatmodel_juice-shop_standard_opus.md  threatmodel_juice-shop_thorough.md  threatmodel_juice-shop_thorough_sonnet.md
hooks/: steering_keywords.json
plugin/: CLAUDE.md  config.json
schemas/: README.md  abuse-cases.schema.yaml  actors-discovered.schema.yaml  actors-repo.schema.yaml  actors-resolved.schema.yaml  actors.schema.yaml  architecture-coverage.schema.json  config-scan-findings.schema.yaml  consolidation-groups.schema.yaml  cross-repo-register.schema.json  (+23 more)
(+1225 files in other folders)
